# NetKit

./: .gitmodules  CMakeLists.txt  COPYING  Info.plist  NetKit.sln  README.md
CoreApp.xcodeproj/: project.pbxproj
NetKit.xcodeproj/: project.pbxproj
include/CoreApp/: CABase64.h  CAConnection.h  CADatabase.h  CADispatch.h  CAError.h  CAHTTP.h  CAIPAddress.h  CAJSONRPC.h  CALog.h  CAOS.h  CAObject.h  CAServer.h  CASmartPtr.h  CASocket.h  CATCPSocket.h  CATypes.h  CAURI.h  CAXMLDocument.h  CAXMLElement.h  CAXMLNode.h  CAXMPP.h  CoreApp.h  cstring.h
include/CoreNetwork/: CNExpected.h  CNJSON.h  CNLog.h  CNObject.h  CNPlatform.h  CNServer.h  CNTCPSocket.h
include/NetKit/: NKAddress.h  NKApplication.h  NKBase64.h  NKComponent.h  NKConcurrent.h  NKConnection.h  NKCookie.h  NKDatabase.h  NKDispatch.h  NKEndpoint.h  NKError.h  NKExpected.h  NKHTTP.h  NKIPAddress.h  NKIntrusiveList.h  NKJSON.h  NKJSONRPC.h  NKKeychain.h  NKLDAP.h  NKLog.h  NKMIME.h  (+34 more)
src/: CABase64.cpp  CAConnection.cpp  CADatabase_SQLite.cpp  CADatabase_SQLite.h  CAHTTP.cpp  CAIPAddress.cpp  CAObject.cpp  CAServer.cpp  CASocket.cpp  CATCPSocket.cpp  CAURI.cpp  CAXMLAttribute.cpp  CAXMLNode.cpp  CMakeLists.txt  CNConnection.cpp  CNDatabase_SQLite.cpp  CNJSONRPC.cpp  CNXMLDocument.cpp  NKAddress.cpp  NKApplication.cpp  NKBase64.cpp  NKComponent.cpp  NKConnection.cpp  NKDatabase_SQLite.cpp  NKDatabase_SQLite.h  NKEndpoint.cpp  NKError.cpp  NKHTTP.cpp  NKIPAddress.cpp  NKJSON.cpp  NKJSONRPC.cpp  NKLDAP.cpp  NKLog.cpp  NKMIME.cpp  NKNetworkInterface.cpp  NKOAuth.cpp  NKObject.cpp  NKProxy.cpp  NKSHA1.cpp  NKService.cpp  (+13 more)
src/Apple/: CALog.cpp  CAOS.mm
src/Linux/: NKLog_Linux.cpp  NKPlatform_Linux.cpp  NKRunLoop_Linux.cpp  NKRunLoop_Linux.h  NKRunloop_Linux.h
src/Mac/: CNOS.mm  CNRunLoop.mm  NKHTTP_Mac.h  NKHTTP_Mac.mm  NKLog.cpp  NKLog_Mac.mm  NKNetworkInterface_Mac.mm  NKPlatform.mm  NKRunLoop_Mac.h  NKRunLoop_Mac.mm
src/Win32/: CRC32.cpp  CRC32.h  EventLog.cpp  EventLog.h  EventLog.mc  NKHTTP_Win32.cpp  NKHTTP_Win32.h  NKKeychain_Win32.cpp  NKKeychain_Win32.h  NKLog_Win32.cpp  NKNetworkInterface_Win32.cpp  NKPlatform_Win32.cpp  NKRunLoop_Win32.cpp  NKRunLoop_Win32.h  NKStackWalk_Win32.cpp  NetKit.vcxproj  NetKit.vcxproj.filters
src/xml/: document.cpp  element.cpp
tests/: CMakeLists.txt  catch.hpp  main.cpp  test_address.cpp  test_http.cpp  test_http_client.cpp  test_http_server.cpp  test_ip_address.cpp  test_json.cpp  test_proxy.cpp  test_socket.cpp  test_ssl.cpp  test_tcp_socket.cpp  test_tstring.cpp  test_uri.cpp  test_uuid.cpp  test_ws.cpp  test_xml.cpp
tests/Win32/: tests.vcxproj  tests.vcxproj.filters
(+3 files in other folders)
